--- a/calendar.html
+++ b/calendar.html
@@ -72,263 +72,190 @@
   <div id="notification" style="display:none;position:fixed;top:1.2rem;right:1.2rem;z-index:12000;min-width:220px;max-width:90vw;padding:1rem 1.5rem;background:linear-gradient(90deg,#2563eb 0%,#06b6d4 100%);color:#fff;font-size:1.1rem;font-weight:600;border-radius:1em;box-shadow:0 4px 24px #2563eb33;transition:opacity 0.3s,transform 0.3s;opacity:0;pointer-events:none;"></div>
 <!-- ... Everything before this remains unchanged ... -->
 <script>
-  // --- Supabase Setup ---
-  const SUPABASE_URL = "https://nmgikevqydvvjdgpdhjb.supabase.co";
-  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5tZ2lrZXZxeWR2dmpkZ3BkaGpiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgzNzI4ODcsImV4cCI6MjA2Mzk0ODg4N30.1zPr-aOlkETD4FhuwhneHoXavSE6N0uNu-awxsidAZQ";
-  const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+const supabase = createClient(
+  "https://yokrcscbxfqucigedgqn.supabase.co",
+  "your-supabase-anon-key"
+);
 
-  // --- State ---
-  let myProfile = null, myFamilyId = null, myOwnerName = null, myOwnerEmail = null;
-  let familyEvents = [];
-  const calendarGrid = document.getElementById('calendarGrid');
-  const monthYear = document.getElementById('monthYear');
-  const prevMonthBtn = document.getElementById('prevMonth');
-  const nextMonthBtn = document.getElementById('nextMonth');
-  const addEventBtn = document.getElementById('addEventBtn');
-  const eventModalBg = document.getElementById('eventModalBg');
-  const closeEventModal = document.getElementById('closeEventModal');
-  const eventForm = document.getElementById('eventForm');
-  const eventTitle = document.getElementById('eventTitle');
-  const eventDate = document.getElementById('eventDate');
-  const eventTime = document.getElementById('eventTime');
-  const eventDesc = document.getElementById('eventDesc');
-  const dayDetailModalBg = document.getElementById('dayDetailModalBg');
-  const closeDayDetailModal = document.getElementById('closeDayDetailModal');
-  const dayDetailTitle = document.getElementById('dayDetailTitle');
-  const hourSchedule = document.getElementById('hourSchedule');
-  const daysOfWeek = ['Sun', 'Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat'];
-  let today = new Date();
-  let currentMonth = today.getMonth();
-  let currentYear = today.getFullYear();
+let myProfile = null;
+let myFamilyId = null;
+let myOwnerName = "";
+let myOwnerEmail = "";
+let familyEvents = [];
 
-  async function getProfileAndFamily() {
-    const { data: { user }, error } = await supabase.auth.getUser();
-    if (error || !user) {
-      showNotification("Please sign in.");
-      return null;
-    }
-    const { data: profile } = await supabase.from('profiles').select('*').eq('email', user.email).single();
-    if (!profile) {
-      showNotification("No profile found.");
-      return null;
-    }
-    myProfile = profile;
-    myFamilyId = profile.family_id;
-    myOwnerName = profile.name;
-    myOwnerEmail = profile.email;
-    return profile;
+const calendarGrid = document.getElementById("calendarGrid");
+const dayModalBg = document.getElementById("dayModalBg");
+const eventModalBg = document.getElementById("eventModalBg");
+const selectedDateDisplay = document.getElementById("selectedDateDisplay");
+const eventForm = document.getElementById("eventForm");
+const eventTitle = document.getElementById("eventTitle");
+const eventTime = document.getElementById("eventTime");
+const eventDesc = document.getElementById("eventDesc");
+const eventDate = document.getElementById("eventDate");
+const notification = document.getElementById("notification");
+
+async function getProfileAndFamily() {
+  const { data, error } = await supabase.auth.getUser();
+  if (error || !data?.user) {
+    showNotification("Please sign in.");
+    return null;
   }
 
-  async function loadFamilyCalendar() {
-    if (!myFamilyId) return;
-    const { data: cal } = await supabase.from('calendars').select('*').eq('family_id', myFamilyId).single();
-    familyEvents = [];
-    if (cal && cal.events) {
-      try {
-        familyEvents = Array.isArray(cal.events) ? cal.events : JSON.parse(cal.events);
-      } catch {
-        familyEvents = [];
-      }
-    }
-    renderCalendar(currentMonth, currentYear);
+  const user = data.user;
+
+  const { data: profile, error: profileError } = await supabase
+    .from("profiles")
+    .select("*")
+    .eq("email", user.email)
+    .single();
+
+  if (profileError || !profile) {
+    showNotification("No profile found.");
+    return null;
   }
 
-  async function saveFamilyCalendar(events) {
-    if (!myFamilyId) return;
-    const { error } = await supabase.from('calendars').upsert([{
-      family_id: myFamilyId,
-      events: events
-    }], { onConflict: ['family_id'] });
-    if (error) {
-      console.error('Supabase upsert error:', error);
-      showNotification('Failed to save event: ' + error.message);
-    }
+  myProfile = profile;
+  myFamilyId = profile.family_id;
+  myOwnerName = profile.name;
+  myOwnerEmail = profile.email;
+  return profile;
+}
+
+async function loadFamilyCalendar() {
+  if (!myFamilyId) return;
+
+  const { data, error } = await supabase
+    .from("calendars")
+    .select("events")
+    .eq("family_id", myFamilyId)
+    .single();
+
+  if (error) {
+    console.error("Failed to load calendar:", error);
+    showNotification("Error loading calendar.");
+    return;
   }
 
-  function renderCalendar(month, year) {
-    calendarGrid.innerHTML = '';
-    daysOfWeek.forEach(day => {
-      const dayDiv = document.createElement('div');
-      dayDiv.className = 'calendar-day';
-      dayDiv.textContent = day;
-      calendarGrid.appendChild(dayDiv);
+  familyEvents = data?.events || [];
+  renderCalendar();
+}
+
+async function saveFamilyCalendar(events) {
+  if (!myFamilyId) return;
+
+  const { error } = await supabase
+    .from("calendars")
+    .upsert([{ family_id: myFamilyId, events }], { onConflict: ["family_id"] });
+
+  if (error) {
+    console.error("Supabase upsert error:", error);
+    showNotification("Failed to save event: " + error.message);
+  }
+}
+
+function renderCalendar() {
+  if (!calendarGrid) return;
+
+  calendarGrid.innerHTML = "";
+
+  const today = new Date();
+  const year = today.getFullYear();
+  const month = today.getMonth();
+  const firstDay = new Date(year, month, 1).getDay();
+  const lastDate = new Date(year, month + 1, 0).getDate();
+
+  for (let i = 0; i < firstDay; i++) {
+    const emptyCell = document.createElement("div");
+    calendarGrid.appendChild(emptyCell);
+  }
+
+  for (let date = 1; date <= lastDate; date++) {
+    const cell = document.createElement("div");
+    cell.className = "calendar-cell";
+    const fullDate = `${year}-${String(month + 1).padStart(2, "0")}-${String(date).padStart(2, "0")}`;
+    cell.dataset.date = fullDate;
+    cell.innerHTML = `<div>${date}</div>`;
+
+    const eventsToday = familyEvents.filter(e => e.date === fullDate);
+    eventsToday.forEach(e => {
+      const badge = document.createElement("div");
+      badge.className = "event-badge";
+      badge.innerText = e.title;
+      cell.appendChild(badge);
     });
-    const firstDay = new Date(year, month, 1).getDay();
-    const daysInMonth = new Date(year, month + 1, 0).getDate();
-    for (let i = 0; i < firstDay; i++) {
-      const blank = document.createElement('div');
-      blank.className = 'calendar-cell';
-      blank.style.background = 'transparent';
-      blank.style.cursor = 'default';
-      calendarGrid.appendChild(blank);
-    }
-    for (let day = 1; day <= daysInMonth; day++) {
-      const cell = document.createElement('div');
-      cell.className = 'calendar-cell';
-      const cellDate = new Date(year, month, day);
-      const cellDateStr = cellDate.toISOString().slice(0, 10);
-      if (day === today.getDate() && month === today.getMonth() && year === today.getFullYear()) {
-        cell.classList.add('today');
-      }
-      const dayNum = document.createElement('div');
-      dayNum.className = 'calendar-day-number';
-      dayNum.textContent = day;
-      cell.appendChild(dayNum);
-      const dayEvents = familyEvents.filter(e => e.date === cellDateStr);
-      if (dayEvents.length > 0) {
-        const eventsDiv = document.createElement('div');
-        eventsDiv.className = 'calendar-events';
-        eventsDiv.innerHTML = dayEvents.map(e =>
-          (e.time ? `<b>${e.time}</b> ` : '') + e.title
-        ).join('<br>');
-        cell.appendChild(eventsDiv);
-      }
-      cell.addEventListener('click', () => openDayDetail(cellDateStr, day, month, year));
-      calendarGrid.appendChild(cell);
-    }
+
+    cell.onclick = () => openDayModal(fullDate);
+    calendarGrid.appendChild(cell);
+  }
+}
+
+function openDayModal(dateStr) {
+  selectedDateDisplay.innerText = `Events on ${dateStr}`;
+  const events = familyEvents.filter(e => e.date === dateStr);
+
+  const list = document.getElementById("eventList");
+  list.innerHTML = "";
+
+  events.forEach(e => {
+    const item = document.createElement("li");
+    item.innerHTML = `<strong>${e.title}</strong> @ ${e.time || "all day"} — ${e.desc || ""}`;
+    list.appendChild(item);
+  });
+
+  eventDate.value = dateStr;
+  dayModalBg.style.display = "block";
+}
+
+document.getElementById("closeDayModal").onclick = () => {
+  dayModalBg.style.display = "none";
+};
+
+document.getElementById("closeEventModal").onclick = () => {
+  eventModalBg.style.display = "none";
+};
+
+document.getElementById("addEventButton").onclick = () => {
+  dayModalBg.style.display = "none";
+  eventModalBg.style.display = "block";
+};
+
+eventForm.onsubmit = async function (e) {
+  e.preventDefault();
+
+  if (!eventTitle.value || !eventDate.value) {
+    showNotification("Please fill in the event title and date.");
+    return;
   }
 
-  function updateMonthYear() {
-    const date = new Date(currentYear, currentMonth);
-    const options = { month: 'long', year: 'numeric' };
-    monthYear.textContent = date.toLocaleDateString(undefined, options);
-  }
-
-  prevMonthBtn.onclick = () => {
-    currentMonth--;
-    if (currentMonth < 0) { currentMonth = 11; currentYear--; }
-    updateMonthYear();
-    renderCalendar(currentMonth, currentYear);
-  };
-  nextMonthBtn.onclick = () => {
-    currentMonth++;
-    if (currentMonth > 11) { currentMonth = 0; currentYear++; }
-    updateMonthYear();
-    renderCalendar(currentMonth, currentYear);
+  const newEvent = {
+    title: eventTitle.value.trim(),
+    date: eventDate.value,
+    time: eventTime.value,
+    desc: eventDesc.value,
+    owner: myOwnerName,
   };
 
-  addEventBtn.onclick = () => {
-    eventModalBg.style.display = 'flex';
-    eventTitle.value = '';
-    eventDate.value = '';
-    eventTime.value = '';
-    eventDesc.value = '';
-  };
-  closeEventModal.onclick = () => { eventModalBg.style.display = 'none'; };
-  eventModalBg.onclick = (e) => {
-    if (e.target === eventModalBg) eventModalBg.style.display = 'none';
-  };
+  familyEvents.push(newEvent);
+  await saveFamilyCalendar(familyEvents);
+  await loadFamilyCalendar();
 
-  eventForm.onsubmit = async (e) => {
-    e.preventDefault();
-    const newEvent = {
-      title: eventTitle.value,
-      date: eventDate.value,
-      time: eventTime.value,
-      desc: eventDesc.value,
-      owner: myOwnerName
-    };
-    familyEvents.push(newEvent);
-    await saveFamilyCalendar(familyEvents);
-    await loadFamilyCalendar();
-    eventModalBg.style.display = 'none';
-    showNotification('Event added and shared with your family!');
-  };
+  eventModalBg.style.display = "none";
+  showNotification("Event added and shared with your family!");
+};
 
-  function openDayDetail(dateStr, day, month, year) {
-    dayDetailModalBg.style.display = 'flex';
-    dayDetailTitle.textContent = `${daysOfWeek[new Date(year, month, day).getDay()]}, ${month + 1}/${day}/${year}`;
-    renderHourSchedule(dateStr);
-  }
-  closeDayDetailModal.onclick = () => { dayDetailModalBg.style.display = 'none'; };
-  dayDetailModalBg.onclick = (e) => {
-    if (e.target === dayDetailModalBg) dayDetailModalBg.style.display = 'none';
-  };
+function showNotification(msg) {
+  if (!notification) return;
+  notification.innerText = msg;
+  notification.style.display = "block";
+  setTimeout(() => {
+    notification.style.display = "none";
+  }, 3000);
+}
 
-  function renderHourSchedule(dateStr) {
-    hourSchedule.innerHTML = '';
-    for (let h = 0; h < 24; h++) {
-      const hourLabel = `${h.toString().padStart(2, '0')}:00`;
-      const hourRow = document.createElement('div');
-      hourRow.className = 'hour-row';
-      const label = document.createElement('div');
-      label.className = 'hour-label';
-      label.textContent = hourLabel;
-      const eventsDiv = document.createElement('div');
-      eventsDiv.className = 'hour-events';
-      const hourEvents = familyEvents.filter(e => e.date === dateStr && e.time && e.time.startsWith(hourLabel.slice(0, 2)));
-      if (hourEvents.length > 0) {
-        eventsDiv.innerHTML = hourEvents.map(e =>
-          `<b>${e.time}</b> ${e.title}<br><span style="color:#64748b;font-size:0.95em;">${e.desc || ''}</span>`
-        ).join('<br>');
-      }
-      const addBtn = document.createElement('button');
-      addBtn.className = 'add-hour-event-btn';
-      addBtn.textContent = '+';
-      addBtn.title = `Add event at ${hourLabel}`;
-      addBtn.onclick = () => {
-        dayDetailModalBg.style.display = 'none';
-        eventModalBg.style.display = 'flex';
-        eventTitle.value = '';
-        eventDate.value = dateStr;
-        eventTime.value = hourLabel;
-        eventDesc.value = '';
-      };
-      hourRow.appendChild(label);
-      hourRow.appendChild(eventsDiv);
-      hourRow.appendChild(addBtn);
-      hourSchedule.appendChild(hourRow);
-    }
-  }
-
-  const tutorialModalBg = document.getElementById('tutorialModalBg');
-  const closeTutorialModal = document.getElementById('closeTutorialModal');
-  const tutorialGotItBtn = document.getElementById('tutorialGotItBtn');
-  function showTutorialIfFirstTime() {
-    if (!localStorage.getItem('dayleeCalendarTutorialSeen')) {
-      tutorialModalBg.style.display = 'flex';
-      localStorage.setItem('dayleeCalendarTutorialSeen', 'yes');
-    }
-  }
-  closeTutorialModal.onclick = () => { tutorialModalBg.style.display = 'none'; };
-  tutorialGotItBtn.onclick = () => { tutorialModalBg.style.display = 'none'; };
-
-  function showNotification(msg, duration = 3500) {
-    const notif = document.getElementById('notification');
-    notif.textContent = msg;
-    notif.style.display = 'block';
-    notif.style.opacity = '1';
-    notif.style.transform = 'translateY(0)';
-    notif.style.pointerEvents = 'auto';
-    setTimeout(() => {
-      notif.style.opacity = '0';
-      notif.style.transform = 'translateY(-30px)';
-      notif.style.pointerEvents = 'none';
-      setTimeout(() => { notif.style.display = 'none'; }, 400);
-    }, duration);
-  }
-
-  async function initialLoadAndSync() {
-    const profile = await getProfileAndFamily();
-    if (!profile) return;
-    await loadFamilyCalendar();
-    updateMonthYear();
-    renderCalendar(currentMonth, currentYear);
-    supabase
-      .channel('calendar-updates')
-      .on('postgres_changes', {
-        event: '*',
-        schema: 'public',
-        table: 'calendars',
-        filter: `family_id=eq.${myFamilyId}`
-      }, async () => {
-        await loadFamilyCalendar();
-      })
-      .subscribe();
-    showTutorialIfFirstTime();
-  }
-
-  window.addEventListener('DOMContentLoaded', initialLoadAndSync);
+window.addEventListener("DOMContentLoaded", async () => {
+  await getProfileAndFamily();
+  await loadFamilyCalendar();
+});
 </script>
 
   <footer>
