--- a/dashboard.html
+++ b/dashboard.html
@@ -79,21 +79,53 @@
           </div>
         </li>
         </a>
-        <a href="/join">
-        <li>
-          <span class="feature-icon"><i class="fa-solid fa-earth-americas"></i></span>
-          <div>
-            <div class="feature-title">Join A Family</div>
-            <div class="feature-desc">Join your Family and share calendars and locations with Daylee.</div>
-          </div>
-        </li>
-        </a>
       </ul>
     </section>
     <section class="mockup">
       <!-- Replace the src below with your actual app screenshot or mockup -->
       <img class="mockup-img" src="/uploads/images/calendar-stock.png" alt="Calendar">
     </section>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+  // Show loader for 2 seconds, then hide
+  window.addEventListener('DOMContentLoaded', async function() {
+    const loader = document.querySelector('.loader');
+    if (loader) {
+      loader.style.display = 'block';
+      setTimeout(() => {
+        loader.style.opacity = '0';
+        loader.style.pointerEvents = 'none';
+        setTimeout(() => loader.style.display = 'none', 400);
+      }, 3000);
+    }
+
+    // --- Supabase Setup ---
+    const SUPABASE_URL = "https://qfgmcnbqhhelrdxvdrdb.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFmZ21jbmJxaGhlbHJkeHZkcmRiIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDgxMTY2OTgsImV4cCI6MjA2MzY5MjY5OH0.OZhA0jmUmGcQ5ZJs3gxy99blGsz7YyRJyBfiHDDAWIc";
+    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
+    // --- Display Family Code ---
+    async function displayFamilyCode() {
+      const { data: { user } } = await supabase.auth.getUser();
+      if (!user) return;
+      const { data: profile } = await supabase.from('profiles').select('family_id').eq('id', user.id).single();
+      if (!profile || !profile.family_id) return;
+      const { data: family } = await supabase.from('families').select('code').eq('id', profile.family_id).single();
+      if (family && family.code) {
+        let codeDiv = document.getElementById('familyCodeDisplay');
+        if (!codeDiv) {
+          codeDiv = document.createElement('div');
+          codeDiv.id = 'familyCodeDisplay';
+          codeDiv.style = "margin:2em auto 1em auto;max-width:400px;background:#e0e7ff;color:#22223b;padding:1em 1.5em;border-radius:1em;text-align:center;font-size:1.2em;font-weight:600;box-shadow:0 2px 12px #2563eb22;";
+          const header = document.querySelector('header');
+          header.parentNode.insertBefore(codeDiv, header.nextSibling);
+        }
+        codeDiv.innerHTML = `Your Family Code: <span style="color:#2563eb;font-weight:700;font-size:1.3em;">${family.code}</span>`;
+      }
+    }
+    displayFamilyCode();
+  });
+</script>
   </main>
   <footer>
     Daylee -  Organize your life, your way.
